Cascading Change Log

2.0.0 [unreleased]

  Added support for properties scoped at the pipe or process scope. Process scope properties will be inherited by
  the current job if any.

  Added c.t.SpillableTupleMap to allow durable groups during asymmetrical joins.

  Changed c.t.SpillableTupleList to implement c.u.Collection and c.t.Spillable interfaces.

  Renamed the c.p.Group class to c.p.Splice and created a c.p.Group interface. c.p.Groupby, CoGroup, Merge, and Join
  are all c.p.Splice types. Only GroupBy and CoGroup are c.p.Group types.

  Moved all "joiners" to c.p.joiner package from c.p.cogroup as they are now shared with the c.p.Join pipe.

  Added c.p.Join pipe to join two or more streams by a common key value without blocking/accumulating the largest
  data stream. This differs from c.p.CoGroup in that there is no grouping or sorting, and on the MapReduce platform,
  no Reduce task. The is commonly known as an asymmetrical or replicated join.

  Changed c.t.h.TupleSerialization#setSerializations() to always include o.a.h.i.s.WritableSerialization as some
  Hadoop versions do not include it if omitted. WritableSerialization is required by c.t.h.MultiInputSplit.

  Added c.p.Merge pipe to create a union of multiple tuple streams. This differs from c.p.GroupBy in that there
  is no grouping or sorting, and on the MapReduce platform, no Reduce task.

  Added c.t.Tap#commitResource() && #rollbackResource() to allow the underlying resource to be notified write processing
  has successfully completed or has failed, respectively, so that any additional cleanup or processing may be completed.

  Added c.t.Hasher to allow any field level Comparators to have hashCode generation delegated to them for their
  respective c.t.Tuple element/field value.

  Added c.f.FlowStepStrategy interface to allow customization of c.f.p.FlowStep configuration information.

  Changed c.f.Flow to lazily test child source taps for modified time to reduce file meta-data queries.
